# discount

./: .gitignore  .travis.yml  CMakeLists.txt  COPYRIGHT  CREDITS  Csio.c  INSTALL  Makefile.in  README  README.md  VERSION  amalloc.c  basename.c  config.h.in  configure.inc  configure.sh  css.c  cstring.h  docheader.c  dumptree.c  emmatch.c  flagprocs.c  flags.c  generate.c  gethopt.3  gethopt.c  gethopt.h  github_flavoured.c  h1title.c  html5.c  libmarkdown.pc.in  main.c  makepage.1  makepage.c  markdown.1  markdown.1.in  markdown.3  markdown.7  markdown.c  markdown.h  (+26 more)
Plan9/: README  README.md  markdown.1  markdown.2  markdown.6  mkfile
cmake/: CMakeLists.txt  config.h.in  discount-config.cmake.in
msvc/: Makefile  README.md  config.h.vc
tests/: anchor.t  autolink.t  automatic.t  backslash.t  callbacks.t  centered.t  code.t  codeblock.t  compat.t  crash.t  defects.t  div.t  dl.t  e_url.t  emphasis.t  extrafootnotes.t  flow.t  footnotes.t  functions.sh  githubtags.t  header.t  html.t  html_comment.t  inlinefenced.t  latex.t  linkyEA.t  linkylinky.t  linkypix.t  list.t  list3deep.t  misc.t  muñoz.t  pandoc.t  para.t  paranoia.t  peculiarities.t  pseudo.t  quote.t  quote.text  reddit.t  (+11 more)
tests/data/: README  f01.html  f01.text  m_embed.html  m_embed.text  m_leading.html  m_leading.text  m_onechar.html  m_onechar.text  m_paired.html  m_paired.text
tests/exercisers/: Makefile  Makefile.in  flags.c  make.include
tools/: README  branch.c  check_pandoc.c  checkbits.sh  cols.c  echo.c  pandoc_headers.c  rep.c  space2nl.c
